# toy-http-rs

./: Cargo.toml  README.md
http-core/: Cargo.toml  index.html
http-core/src/: main.rs
http-lib/: Cargo.toml
http-lib/src/: http.rs  lib.rs  macros.rs  request.rs  response.rs  server.rs
http-lib/src/middleware/: logger.rs  middleware.rs  mod.rs
